--- a/architect.html
+++ b/architect.html
@@ -9,7 +9,7 @@
 <body>
     <header>
        <nav>
-        <h3 class="nav-title">G3 Architects</h3>
+        <h3 class="section-title">G3 Architects</h3>
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
@@ -40,6 +40,51 @@
            <h3 class="teams-title"><span class="Quick-list text-light-gray">Quick list</span> <span class="">of Our </span><span class="text-features">Features</span></h3>
            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
            <button class="btn-primary">Explore More</button>
+        </div>
+       </section>
+       <!-- features section -->
+       <section class="features">
+
+       </section>
+       <!-- facts section -->
+       <section class="facts">
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="facts-card-container">
+            <div class="card">
+                <img src="./g3-architects-resources/images/icons/ribon.png" alt="">
+                <h2 class="card-stats">54</h2>
+                <p class="card-title text-light-gray">Awards Winning</p>
+            </div>
+            <div class="card">
+                <img src="./g3-architects-resources/images/icons/projects.png" alt="">
+                <h2 class="card-stats">1458</h2>
+                <p class="card-title text-light-gray">Project Finished</p>
+            </div>
+            <div class="card">
+                <img src="./g3-architects-resources/images/icons/projects.png" alt="">
+                <h2 class="card-stats">590</h2>
+                <p class="card-title text-light-gray">Client Worked</p>
+            </div>
+            <div class="card">
+                <img src="./g3-architects-resources/images/icons/email.png" alt="">
+                <h2 class="card-stats">22578</h2>
+                <p class="card-title text-light-gray">Email Send</p>
+            </div>
+        </div>
+       </section>
+       <!-- Sponsors section -->
+       <section class="sponsors">
+        <h3 class="section-title">Our Sponsors</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="sponsors-img-container">
+            <img src="./g3-architects-resources/images/sponsors/spotify.png"alt="">
+            <img src="./g3-architects-resources/images/sponsors/amazon.png" alt="">
+            <img src="./g3-architects-resources/images/sponsors/google.png" alt="">
+            <img src="./g3-architects-resources/images/sponsors/telerama.png"
+            alt="">
+            <img src="./g3-architects-resources/images/sponsors/figma.png"
+            alt="">
         </div>
        </section>
     </main>
