--- a/architect.html
+++ b/architect.html
@@ -53,11 +53,11 @@
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             </div>
             <div class="card">
-                <h4>Dexktop & Mobile Version</h4>
+                <h4>Drag & Drop Builder</h4>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             </div>
             <div class="card">
-                <h4>Dexktop & Mobile Version</h4>
+                <h4>Awesome Modern Design</h4>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             </div>
           </div>
