--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
        </section>
     </main>
     <footer>
-
+        <p class="footer-color">All rights reserved copyright: &copy;2023 startup landing page design</p>
     </footer>
 </body>
 </html>
